Oct 18, 2007 - chris
o bugfix: when moving a cursor through duplicates and the cache was
	exhausted, an assert was triggered - fixed

Oct 16, 2007 - chris
o bugfix: ham_close in an environment could lead to a segmentation fault, 
	because the cache for extended keys was not properly set up, before
	it was deleted

Oct 11, 2007 - chris
o the default pagesize for unix databases is now 16kb, not 4kb; benchmarks 
    show that this is the fastest option, but still results in small files

Oct 10, 2007 - chris ---------------------------------------------------
                      release of hamsterdb-0.4.7

Oct 09, 2007 - chris
o restructured the wince MSV8 solution and project files

Oct 08, 2007 - chris
o completely recreated the win32 MSVC8 solution and project files

Oct 05, 2007 - chris
o added function ham_cursor_get_duplicate_count
o fixed a bug in coupling an uncoupling cursor: the duplicate id was lost
o added a new sample env2.c, which demonstrates a 1:n relationship for
    two tables (with the use of duplicate keys)

Oct 04, 2007 - chris
o record numbers are now no longer reused after they were deleted and the
    database was reopened.

Oct 03, 2007 - chris
o rewrote some blob management routines which resulted in an improvement
    of duplicate keys.

Oct 02, 2007 - chris
o the freelist routines were completely rewritten and are much faster now.

Oct 01, 2007 - chris
o it's now enough to initialize a ham_key_t and ham_record_t once in the
    beginning, and not before every use. also added some checks and 
    errors when using an uninitialized structure.

Sep 30, 2007 - chris
o ham_env_close now expects a second parameter for flags; you can specify the
    flag HAM_AUTO_CLOSE, and all open databases are closed automatically.
    if the flag is not specified, but cursors are still open, ham_env_close
    fails and returns HAM_ENV_NOT_EMPTY.
o ham_close now expects a second parameter for flags; you can specify the